--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>DOM Playground</title>
-    <link rel="stylesheet" href="styles.css" media="screen" title="no title">
-    <script src="script.js" charset="utf-8"></script>
+    <link rel="stylesheet" href="./styles.css" media="screen" title="no title">
+    <script defer src="./script.js" charset="utf-8"></script>
   </head>
   <body>
     <header>
